@@ -3,18 +3,16 @@ package com.kirin.linebot.factory;
 import java.net.URI;
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
 import com.linecorp.bot.model.action.Action;
 import com.linecorp.bot.model.action.DatetimePickerAction;
-import com.linecorp.bot.model.action.MessageAction;
 import com.linecorp.bot.model.message.TemplateMessage;
-import com.linecorp.bot.model.message.template.ButtonsTemplate;
 import com.linecorp.bot.model.message.template.CarouselColumn;
 import com.linecorp.bot.model.message.template.CarouselTemplate;
 
@@ -24,11 +22,10 @@ public class TemplateFactory {
   @Value("${line.bot.image.kirin}")
   private String imagePath;
 
+  private static final String DATE_TEXT = "予約";
   private static final String LABEL_DATE = "%sの予約";
-  private static final String DESCRIPTION_DATE = "予約したい日付を選んでください";
-
-  private static final String LABEL_NAME = "予約";
-  private static final String DESCRIPTION_NAME = "予約対象を選んでください";
+  private static final String DESCRIPTION_DATE = "予約したい人を選んでください";
+  private static final String DEFAULT_ALT_TEXT = "LINEBOTからの返信";
 
   /**
    * 予約日付一覧を表示するテンプレートを生成するファクトリ
@@ -36,41 +33,40 @@ public class TemplateFactory {
    * @param targetName 予約対象の名前
    * @return 予約日付一覧を表示するメッセージテンプレート
    */
-  public TemplateMessage reservationDateMessage(String targetName) {
-    URI imageUrl = URI.create(imagePath);
+  public TemplateMessage reservationDateMessage(List<String> targetNames) {
+    URI imageUrl = this.createURI(imagePath);
     LocalDate now = LocalDate.now(ZoneId.of("Asia/Tokyo"));
+    List<Action> datetimePickerActions = targetNames.stream()
+        .map(targetName -> DatetimePickerAction.OfLocalDate
+            .builder()
+            .label(String.format(LABEL_DATE, targetName))
+            .initial(now)
+            .min(now)
+            .max(LocalDate.parse("2100-12-31"))
+            .data(targetName)
+            .build())
+        .collect(Collectors.toUnmodifiableList());
     CarouselTemplate carouselTemplate = new CarouselTemplate(
-        Arrays.asList(
+        List.of(
             new CarouselColumn(
                 imageUrl,
-                targetName,
+                DATE_TEXT,
                 DESCRIPTION_DATE,
-                Arrays.asList(
-                    DatetimePickerAction.OfLocalDate
-                        .builder()
-                        .label(String.format(LABEL_DATE, targetName))
-                        .initial(now)
-                        .min(now)
-                        .max(LocalDate.parse("2100-12-31"))
-                        .data(targetName)
-                        .build()))));
-    return new TemplateMessage(null, carouselTemplate);
+                datetimePickerActions)));
+    return new TemplateMessage(DEFAULT_ALT_TEXT, carouselTemplate);
   }
 
   /**
-   * 予約者名一覧を表示するテンプレートを生成するファクトリ
+   * LINE用の画像パスを返す内部メソッド
    * 
-   * @param targetNames 予約対象の名前のリスト
-   * @return 予約者一覧を表示するメッセージテンプレート
+   * @param path 画像へのパス文字列
+   * @return LINE用の画像URIオブジェクト
    */
-  public TemplateMessage reservationNameMessage(List<String> targetNames) {
-    URI imageUrl = URI.create(imagePath);
-
-    List<Action> actions = targetNames.stream()
-        .map(name -> new MessageAction(name, name))
-        .collect(Collectors.toUnmodifiableList());
-
-    ButtonsTemplate buttonsTemplate = new ButtonsTemplate(imageUrl, LABEL_NAME, DESCRIPTION_NAME, actions);
-    return new TemplateMessage(null, buttonsTemplate);
+  private URI createURI(String path) {
+    return ServletUriComponentsBuilder.fromCurrentContextPath()
+        .scheme("https")
+        .path(imagePath)
+        .build()
+        .toUri();
   }
 }
